tools/tests/ui/fail/l1094.cnf
// Test file for error code: L1094
// Expected error: Underflow Expected character in indentation -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-underflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
